[gd_scene load_steps=6 format=3 uid="uid://d3h0uar3ogx2a"]

[ext_resource type="Texture2D" uid="uid://cap2urw604bhe" path="res://Assets/UI/Purchase/BaseT1_Purchase.png" id="1_ku26y"]
[ext_resource type="Script" path="res://Scenes/GUI/Purchase.gd" id="1_tcn5w"]
[ext_resource type="Texture2D" uid="uid://cx3ljdj6nh7st" path="res://Assets/UI/Purchase/SniperT1_Purchase.png" id="2_huivq"]
[ext_resource type="Texture2D" uid="uid://cy3eugjdqdpf6" path="res://Assets/UI/Purchase/CannonT1_Purchase.png" id="3_b0xux"]
[ext_resource type="Texture2D" uid="uid://bbw3uspq3idmu" path="res://Assets/UI/range_overlay.png" id="5_ka5gf"]

[node name="Purchase" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tcn5w")

[node name="range_overlay" type="Sprite2D" parent="."]
texture = ExtResource("5_ka5gf")

[node name="GridContainer" type="GridContainer" parent="."]
use_parent_material = true
layout_direction = 1
layout_mode = 0
offset_left = -13.0
offset_top = -16.0
offset_right = 91.0
offset_bottom = 94.0
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(-104, -104)
columns = 3

[node name="T1_basic" type="TextureButton" parent="GridContainer" groups=["build_buttons"]]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("1_ku26y")

[node name="T1_sniper" type="TextureButton" parent="GridContainer" groups=["build_buttons"]]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_huivq")

[node name="BaseT3_Purchase" type="TextureButton" parent="GridContainer" groups=["build_buttons"]]
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("3_b0xux")

[connection signal="mouse_entered" from="GridContainer/T1_basic" to="." method="_on_t_1_basic_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/T1_basic" to="." method="_on_t_1_basic_mouse_exited"]
[connection signal="mouse_entered" from="GridContainer/T1_sniper" to="." method="_on_t_1_sniper_mouse_entered"]
[connection signal="mouse_exited" from="GridContainer/T1_sniper" to="." method="_on_t_1_sniper_mouse_exited"]
